# IMsoftware

./: .~README.md  CMakeLists.txt  DBconnPool.cpp  DBconnPool.hpp  IMServer.cpp  IMServer.h  IMThread.cpp  IMThread.hpp  IMserver.cpp  MYSQL_DB.cpp  MYSQL_DB.hpp  README.md  ThreadPool.cpp  ThreadPool.hpp  init.sql  main.cpp  msgFormat.h  utils.cpp  utils.h
Model/: Redis.cpp  Redis.h  freindModel.cpp  friendModel.cpp  friendModel.hpp  offlineMsgModel.cpp  offlineMsgModel.hpp  userModel.cpp  userModel.hpp
bo/: friendMsg.hpp  offlineMsg.hpp  user.hpp
